2004-09-12 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/NSDataLinkPanel.h: Added new attributes.
	* Source/NSDataLinkPanel.m: Implemented some 
	methods.
	* Panels/English.lproj/GSDataLinkPanel.gorm: Updated
	graphics and added link to new ivar.
	* Source/NSDataLink.m:
	* Source/NSDataLinkManager.m: Code cleanup.
	
2004-09-11 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSCell.m: Reverted previous change. 
	The change was causing an issue where if the font was 
	changed on an NSButtonCell which contains both an image and text. 
	The title was being, incorrectly, reset to "title".  
	* Source/NSDataLinkPanel.m: Renamed the shared variable to something
	more standard.

2004-09-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-setStringValue:, -setFont:, -setImage:):  Use
	method call to change cell type. 

2004-09-07  Adam Fedor  <fedor@gnu.org>

	* Source/GNUmakefile: Specify INTERFACE_VERSION explicitly.

	* Documentation/ReleaseNotes.gsdoc, Documentation/news.texi: Update
	for new release.

2004-09-05  Quentin Mathe <qmathe@club-internet.fr>
        
	* Headers/Additions/GNUstepGUI/GSToolbarView.h: Changed
	_heightFromLayout from unsigned int to float.
        * Source/GSToolbarView.m (-initWithFrame:displayMode:sizeMode:): Removed
	the local variable toolbarViewHeight to use the ivar _heightFromLayout
	in order to have a toolbar height which is not equal to zero when the
	toolbar is empty. (the toolbar height now matches initially the height
	associated with the selected size mode)
	(-_handleBackViewsFrame): Added a local variable newHeight to store the
	highest caculated height for a toolbar item in order to not have
	_heightFromLayout set to zero when the toolbar is empty (no toolbar
	items).
	* Source/GSToolbar.m (-setDelegate:, -_setDelegate:broadcast:,
	-setToolbarView:): Deactived the delegate
	synchronization with broadcast set to NO for the method